<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.iems5722.project.MainActivity" >
	
    <EditText  
    	android:id="@+id/nickname"    
    	android:layout_width="fill_parent"   
    	android:layout_height="wrap_content"   
    	android:hint="@string/nickname"/>
    
	<Button     
	    android:id="@+id/button"
        android:layout_width="fill_parent"  
    	android:layout_height="wrap_content"
    	android:text="@string/button_name"/> 
    	
    <TextView 
        android:id="@+id/about"
        android:layout_width="wrap_content"  
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	android:textStyle="bold"
    	android:textSize="25sp"
    	android:text="@string/about"
    	android:layout_marginTop="30dp"/> 
    
    <TextView 
        android:id="@+id/member1"
        android:layout_width="wrap_content"  
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	android:textSize="20sp"
    	android:text="@string/member1"
    	android:layout_marginTop="10dp"/> 
    <TextView 
        android:id="@+id/member2"
        android:layout_width="wrap_content"  
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	android:textSize="20sp"
    	android:text="@string/member2"/> 
    <TextView 
        android:id="@+id/member3"
        android:layout_width="wrap_content"  
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	android:textSize="20sp"
    	android:text="@string/member3"/>
    
    <TextView 
        android:id="@+id/github"
        android:layout_width="wrap_content"  
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	android:textSize="12sp"
    	android:layout_marginTop="10dp"
    	android:text="@string/github"/>
    	
</LinearLayout>
